changes in the svgs

--- a/src/index.css
+++ b/src/index.css
@@ -245,8 +245,9 @@ video {
   padding-top: 10px;
   padding-left: 5px;
   width:fit-content;
-  width: 4rem;
-  height: 2.9rem;
+  min-width: 4rem;
+  min-height:35px ;
+  display: block;
   /* height: 100%; */
   fill: white;
   pointer-events: fill;
