--- a/src/index.css
+++ b/src/index.css
@@ -453,3 +453,45 @@ video {
     transform: translatex(0%);
   }
 }
+/* form */
+
+.form-step{
+  width: 100%;
+}
+.form-step input {
+  width: 100%;
+  padding: 16px;
+  border-radius: 24px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color:  white;
+  outline: none;
+  border: none;
+}
+
+.form-step{
+  position: relative;
+}
+
+.form-step input::placeholder{
+  color: white;
+}
+
+
+.form-step button {
+  /* content: attr(); */
+  position: absolute;
+  top: 14px;
+  right: 10px;
+  padding: 5px;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.submitbuttonforform{
+  background: #3D4FE0;
+}
