--- a/src/Components/modal/styles/index.css
+++ b/src/Components/modal/styles/index.css
@@ -123,39 +123,48 @@ text-align: center;
   width: inherit;
   height: inherit;
   object-fit: fill;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+ border-radius: 2px;
 }
 
 .thumbnailcontainer{
   display: flex;
   width: 288px;
-  height: 120px;
+  height: 76px;
   background-color: white;
   margin-top: 8px;
   border-radius: 5px;
+  padding: 4px;
 }
 .thumbnail .img-container{
   width: 88px;
-  height: 120px;
+}
+
+.thumbnail .img-container img {
+   object-fit: cover;
+   width: 100%;
+   height: 100%;
 }
 
 .text-container h1 ,h6 {
   font-size: 12px;
-  line-height: 18px;
+  line-height: 16px;
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 100;
 }
 
 .text-container h6 {
  padding: 2px;
+  padding-top: 10px;
  font-weight: bolder;
  height: 14px;
+ font-size: 14px;
+ line-height: 16.41px;
 
 }
 
 .text-container{
   padding: 8px;
+  padding-left:  6px;
 }
 
 .thumbnail .text-container button {
