--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,26 @@
 :root {
-  --color-border:    "" ;
-  --color-width:     "" ;
-  --color-animation: "" ;
-  --width-smallbox : "";
-  --height-smallbox : "";
-  --text-color  : "";
-  --bottom-css  : "";
-  --row-position : "";
-  --padding-x : "";
-  --padding-y : "";
-  --grid-gap : "" ;
-  --f22-display : "";
-  --f22-bottom-color : "";
-  --f22-bottom-background : "";
-  --largecontainer-width : "";
-  --largecontainer-height : "";
-  --buttonloadanimation : "";
- }
-             
+  --color-border: "";
+  --color-width: "";
+  --color-animation: "";
+  --width-smallbox: "";
+  --height-smallbox: "";
+  --text-color: "";
+  --bottom-css: "";
+  --row-position: "";
+  --padding-x: "";
+  --padding-y: "";
+  --grid-gap: "";
+  --f22-display: "";
+  --f22-bottom-color: "";
+  --f22-bottom-background: "";
+  --largecontainer-width: "";
+  --largecontainer-height: "";
+  --buttonloadanimation: "";
+  --progressbarcolor: "";
+  --progressbarheight: "";
+  
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -27,7 +30,7 @@
 .video-container {
   width: var(--largecontainer-width);
   height: var(--largecontainer-height);
-  
+
   position: fixed;
   bottom: 10px;
   /* right: 10px; */
@@ -80,17 +83,17 @@
 .overlay-thing-button {
   display: flex;
   align-items: center;
-  padding: var(--padding-y)  var(--padding-x)   ;
+  padding: var(--padding-y) var(--padding-x);
   border-radius: 20px;
   margin-bottom: 8px;
   background-color: rgba(0, 0, 0, 0.6);
-  color:  white;
+  color: white;
   cursor: pointer;
   font-size: 12px !important ;
   width: 100%;
   text-align: left;
   isolation: isolate;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: bold;
 }
 
@@ -111,8 +114,6 @@ a {
   font-size: inherit;
 }
 
-
-
 .small-video-container-box-parent {
   width: calc(150px + 18px);
   height: calc(200px + 18px);
@@ -120,11 +121,11 @@ a {
   z-index: 100;
   isolation: isolate;
   visibility: visible;
- z-index: 2147483647;
+  z-index: 2147483647;
 }
 
-.smsmsmhidden{
- visibility: hidden;
+.smsmsmhidden {
+  visibility: hidden;
 }
 .small-video-container-box {
   position: absolute;
@@ -135,13 +136,12 @@ a {
   z-index: 100;
   border-radius: 50%;
   isolation: isolate;
-  
 }
 
- .pageloadanimation{
-  animation: var(--buttonloadanimation)  0.9s ease-out  ;
+.pageloadanimation {
+  animation: var(--buttonloadanimation) 0.9s ease-out;
   animation-iteration-count: 2;
- }
+}
 
 video {
   height: 100%;
@@ -185,7 +185,7 @@ video {
   font-size: 15px;
   color: var(--text-color);
   font-family: sans-serif;
-  text-shadow:1px 1px #000;
+  text-shadow: 1px 1px #000;
   cursor: pointer;
 }
 /* naturallyyours */
@@ -206,7 +206,7 @@ video {
   border-bottom-right-radius: 10px;
 }
 
-.lg-credit a:hover{
+.lg-credit a:hover {
   color: #fff;
 }
 
@@ -245,22 +245,21 @@ video {
 .mutedbutton svg {
   padding-top: 10px;
   padding-left: 5px;
-  width:fit-content;
+  width: fit-content;
   width: 4rem;
   height: 2.9rem;
   /* height: 100%; */
   fill: white;
   pointer-events: fill;
 }
- 
-.replay{
-  left : 80px
+
+.replay {
+  left: 80px;
 }
 
 .replay svg {
   width: 3rem;
 }
-
 
 /* @media only screen and (max-width: 1440px) {
  
@@ -368,30 +367,25 @@ video {
   z-index: -10;
 }
 
-
-
 .overlay-thing-button:hover {
   box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
   transform: translateY(-0.25em);
-  transition: 0.5s ease-in-out ;
+  transition: 0.5s ease-in-out;
 }
 
-
-.icon-container{
+.icon-container {
   padding-right: 1rem;
 }
 
-.share{
+.share {
   padding: 3.5px;
   padding-right: 1rem;
 }
 
-
-
 @keyframes popofbuttton {
-  0%{
+  0% {
     transform: translateY(100%);
-  } 
+  }
   70% {
     transform: translateY(-50%);
   }
@@ -400,14 +394,12 @@ video {
   }
 }
 
-
-
 /* button loading animation */
 
 @keyframes popofbuttton {
-  0%{
+  0% {
     transform: translateY(100%);
-  } 
+  }
   70% {
     transform: translateY(-50%);
   }
@@ -417,9 +409,9 @@ video {
 }
 
 @keyframes poprightfbuttton {
-  0%{
+  0% {
     transform: translatex(100%);
-  } 
+  }
   70% {
     transform: translatex(-50%);
   }
@@ -428,11 +420,10 @@ video {
   }
 }
 
-
 @keyframes popleftfbuttton {
-  0%{
+  0% {
     transform: translatex(-100%);
-  } 
+  }
   70% {
     transform: translatex(50%);
   }
@@ -441,12 +432,10 @@ video {
   }
 }
 
-
-
 @keyframes poptopbutton {
-  0%{
+  0% {
     transform: translatey(-100%);
-  } 
+  }
   70% {
     transform: translatey(50%);
   }
@@ -456,7 +445,7 @@ video {
 }
 /* form */
 
-.form-step{
+.form-step {
   width: 100%;
 }
 .form-step input {
@@ -464,19 +453,18 @@ video {
   padding: 16px;
   border-radius: 24px;
   background-color: rgba(0, 0, 0, 0.6);
-  color:  white;
+  color: white;
   outline: none;
   border: none;
 }
 
-.form-step{
+.form-step {
   position: relative;
 }
 
-.form-step input::placeholder{
+.form-step input::placeholder {
   color: white;
 }
-
 
 .form-step button {
   /* content: attr(); */
@@ -493,46 +481,63 @@ video {
   cursor: pointer;
 }
 
-.submitbuttonforform{
-  background: #3D4FE0;
+.submitbuttonforform {
+  background: #3d4fe0;
 }
 
-
-.hidden{
+.hidden {
   display: none;
 }
 
 .toast {
-   position: absolute;
-   top: 10px;
-   width: 100%;
-   text-align: center;
-
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  text-align: center;
 }
 
-.toast-text{
+.toast-text {
   margin: 2rem;
   padding: 5px;
   border-radius: 20px;
   background-color: #fff;
-   padding: 15px;
+  padding: 15px;
 }
 
-.pausestyles{
-
-    position:  absolute;
-    top: 0;
-    display: flex;
-    justify-content:  center;
-    align-items:  center;
-    width: 100%;
-    height: 100%;
+.pausestyles {
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
-.f22pluginpausevideos{
+.f22pluginpausevideos {
   background: linear-gradient(transparent, rgba(0, 0, 0, 0.6));
   transition: all 250ms ease 0s;
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+/*  player */
+.playbar {
+  z-index: 99;
+  position: absolute;
+  top: 1px;
+  width: 100%;
+  overflow: hidden;
+  /* height: 10px; */
+  /* background-color: black; */
+}
+
+.playbarinline {
+  background-color: var(--progressbarcolor);
+  height: var(--progressbarheight);
+  width: 100%;
+  border-radius: 20px;
+  margin: 0 auto;
+  margin-left: 5px;
 }
